--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,37 @@
 	text-align: start !important;
 }
 
-.ant-input-suffix {
-	color: #1677ff !important;
-}
-
 .ant-collapse-header {
 	padding-left: 0 !important;
-	color: #1677ff !important;
+	color: #594af1 !important;
+}
+
+.ant-btn-primary {
+	background: #594af1;
+	color: #fff !important;
+}
+
+.ant-btn-primary:hover {
+	background: #594af1 !important;
+	color: #fff !important;
+}
+
+.ant-btn-dangerous:hover {
+	background: #ff4d4f !important;
+	color: #fff !important;
+}
+
+.ant-btn-primary:disabled {
+	background: #594af1 !important;
+	opacity: 0.6 !important;
+	color: #fff !important;
+}
+
+.chose-wallet .ant-segmented-item {
+	width: 116px !important;
+	height: 110px !important;
+}
+
+.ant-segmented {
+	background: #D9D9D9 !important;
 }
