--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,7 @@
 .ant-segmented .ant-avatar {
 	margin-top: 10px !important;
 }
+
+.ant-form-item .ant-form-item-label >label::after {
+	content: '' !important;
+}
